displaying tables for teams and events

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,4 @@
+
 .loginBtn{
 	float:right;
 
@@ -32,6 +33,13 @@
 	color: black;
 }
 
+.eventTable{
+	display: none;
+}
+
+.teamTable{
+	display: none;
+}
 /*new css*/
 
 .navbar-brand {
