--- a/views/main.html
+++ b/views/main.html
@@ -18,7 +18,7 @@
     <div class="navbar navbar-static-top primaryNav" role="navigation">
       <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
               <img src="assets/images/logoName.png" alt="BringTeam">
             </a>
           </div>
@@ -49,16 +49,18 @@
       <!--Icon section -->
       <div class = "row">
         <!--Team Roster -->
+
         <div class="icon-section">
           <div class= "col-lg-4 col-md-4 col-sm-6 col-xs-12">
-            <h3 class="text-center"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>  TEAM ROSTER</h3>
+        <h3 class="text-center"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span><a class="getDetails" href="/events">TEAM ROSTER</a></h3>
              <h4 class="text-center">View team members and contact info</h4><br>
           </div>
         </div>
+        <!-- </button> -->
           <!--Practice and Game Schedules -->
           <div class="icon-section">
           <div class= "col-lg-4 col-md-4 col-sm-6 col-xs-12">
-            <h3 class="text-center"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>  SCHEDULER</h3>
+            <h3 class="text-center"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span><a class="getDetails" href="/events">SCHEDULER</a></h3>
              <h4 class="text-center">Manage practices and game events</h4><br>
           </div>
         </div>
