--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -18,7 +18,7 @@
 		<div class="navbar navbar-static-top primaryNav" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#">
+					<a class="navbar-brand" href="/">
 						<img src="assets/images/logoName.png" alt="BringTeam">
 					</a>
 				</div>
