--- a/views/user/signIn.html
+++ b/views/user/signIn.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>events</title>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-		<!-- Bootstrap Stylesheet -->
-		<link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-		<!-- sidebar stylesheet -->
-		<link href="../assets/css/simple-sidebar.css" rel="stylesheet">
-		<!-- internal stylesheet -->
-		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-	</head>
+  <head>
+    <title>events</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
+    <!-- Bootstrap Stylesheet -->
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- sidebar stylesheet -->
+    <link href="../assets/css/simple-sidebar.css" rel="stylesheet">
+    <!-- bootstrap switch -->
+    <link href="../assets/css/bootstrap-switch.min.css" rel="stylesheet">
+    <!-- internal stylesheet -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+        <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+  </head>
 <body>
 <!--Nav Bar header -->
     <div class="navbar navbar-static-top primaryNav" role="navigation">
@@ -109,15 +114,16 @@
 
 
 
-
-			<!-- jquery -->
-			<script type="text/javascript" src="/script/jquery.js"></script>
-			<!-- handlebars cdn -->
-			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
-			<!-- bootstrap stylesheet -->
-			<script type="text/javascript" src="/script/bootstrap.min.js"></script>
-			<!-- js -->
-			<script type="text/javascript" src="/script/script.js">
-			</script>
-		</body>
-	</html>
+    <!-- jquery -->
+    <script type="text/javascript" src="/script/jquery.js"></script>
+    <!-- bootstrap Switch -->
+    <script type="text/javascript" src="/script/bootstrap-switch.min.js"></script>
+    <!-- handlebars cdn -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+    <!-- bootstrap stylesheet -->
+    <script type="text/javascript" src="/script/bootstrap.min.js"></script>
+    <!-- js -->
+    <script type="text/javascript" src="/script/script.js">
+    </script>
+  </body>
+</html>
