--- a/views/enteringEvents/enteringTeamMembers.html
+++ b/views/enteringEvents/enteringTeamMembers.html
@@ -10,39 +10,41 @@
 		<link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 		<!-- sidebar stylesheet -->
 		<link href="../assets/css/simple-sidebar.css" rel="stylesheet">
+		<!-- bootstrap switch -->
+		<link href="../assets/css/bootstrap-switch.min.css" rel="stylesheet">
 		<!-- internal stylesheet -->
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+		    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 	</head>
 	<body>
-		<a href="#menu-toggle" class="btn btn-default glyphicon glyphicon-menu-hamburger" id="menu-toggle">
-		</a>
-		<div class= "loginBtn">
-			<button id="logIn" class="log-in">Log In</button>
-			<button id="signUp" class="sign-up">Sign Up</button>
-		</div>
-		<button id="signOut" class="sign-out">Sign Out</button>
-	</div>
-	<div id="wrapper">
-		<!-- Sidebar -->
-		<div id="sidebar-wrapper">
-			<ul class="sidebar-nav">
-				<li class="sidebar-brand">
-					<a href="#">
+		<!--Nav Bar header -->
+		<div class="navbar navbar-static-top primaryNav" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/">
+						<img src="assets/images/logoName.png" alt="BringTeam">
 					</a>
-				</li>
-				<li>
-					<a href="/">Home/About Us</a>
-				</li>
-				<li>
-					<a href="/events">Events</a>
-				</li>
-				<li>
-					<a href="/input">Enter New Events</a>
-				</li>
-			</ul>
+				</div>
+				<div class= "loginBtn">
+					<button id="logIn" class="log-in">Log In</button>
+					<button id="signUp" class="sign-up">Sign Up</button>
+				</div>
+				<button id="signOut" class="sign-out">Sign Out</button>
+			</div>
+			<div class="mainHeader" role="banner">
+				<div class="container">
+					<div class="row">
+						<!-- <div class="col-md-3"> -->
+							<a class="homeLink col-md-3"  role="navigation" href="/"><span class="glyphicon glyphicon-home"></span></a>
+							  <button class="btn btn-primary events-btn"><a href="events">Events</a></button>
+              <button class="btn btn-primary stats-btn"><a href="input">Stats</a></button>
+              <button class="btn btn-primary addevents-btn"><a href="input">Add Events</a></button>
+					</div>
+			</div>
 		</div>
-		<div id="page-content-wrapper">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
 						<h1>Enter Team Members</h1>
@@ -69,17 +71,25 @@
 					</div>
 				</div>
 			</div>
+
+
+		<!--Footer describing team developers -->
+		<div class="pageFooter">
+			<div class = "container">
+			Copywrite: 2016, Made by Dream Team.  All rights reserved.</div>
+
+
 		</div>
-	</div>
-	<script type="text/javascript" src="/script/jquery.js"></script>
-	<!-- handlebars cdn -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
-	<!-- bootstrap stylesheet -->
-	<script type="text/javascript" src="/script/bootstrap.min.js"></script>
-	<!-- js -->
-	<script type="text/javascript" src="/script/script.js">
-	</script>
-</body>
-</html>
-</body>
+		<!-- jquery -->
+		<script type="text/javascript" src="/script/jquery.js"></script>
+		<!-- bootstrap Switch -->
+		<script type="text/javascript" src="/script/bootstrap-switch.min.js"></script>
+		<!-- handlebars cdn -->
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+		<!-- bootstrap stylesheet -->
+		<script type="text/javascript" src="/script/bootstrap.min.js"></script>
+		<!-- js -->
+		<script type="text/javascript" src="/script/script.js">
+		</script>
+	</body>
 </html>
