--- a/views/enteringEvents/eventsEntry.html
+++ b/views/enteringEvents/eventsEntry.html
@@ -15,7 +15,7 @@
 		<!-- internal stylesheet -->
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 		    <!--Load the AJAX API-->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> -->
 	</head>
 	<body>
 		<!--Nav Bar header -->
