--- a/views/user/signIn.html
+++ b/views/user/signIn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>events</title>
+    <title>BringTeam-LogIn</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
@@ -60,24 +60,23 @@
           <div class="form-group">
                 <label>Email</label>
                 <input id="userEmail" name="email" type="text" class="form-control input-lg">
-              </div>
+          </div>
 
 
-	      <div class="form-group">
+	        <div class="form-group">
                 <label>Password</label>
                 <input id="userPassword" name="password" type="password" class="form-control input-lg">
-              </div>
+          </div>
 
 
-  <div class="form-group clearfix">
-    <button id="userSignIn" class="pull-right btn btn-success loginBtn" type="submit" data-loading-text="Log in">Log In</button>
+          <div class="form-group clearfix">
+          <button id="userSignIn" class="pull-right btn btn-success loginBtn" type="submit" data-loading-text="Log in">Log In</button>
    </form>
 
-
-     <p class="noAccount">Don't have a BringTeam account yet?
+      <!-- go to signup page -->
+    <p class="noAccount">Don't have a BringTeam account yet?
        <a href="/signUp">Create Account</a>
-       <!-- go to signup page -->
-             </p>
+    </p>
 
 </div>
 </div>
