--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>events</title>
+		<title>BringTeam-SignUp</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
