worked on facebook login for users, it is working, also added a column in players table for facebook user id and URL

--- a/views/main.html
+++ b/views/main.html
@@ -96,6 +96,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
     <!-- bootstrap stylesheet -->
     <script type="text/javascript" src="/script/bootstrap.min.js"></script>
+      <!-- user login js -->
+    <script type="text/javascript" src="/script/userLogin.js"></script>
     <!-- js -->
     <script type="text/javascript" src="/script/script.js">
     </script>
