--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -83,11 +83,16 @@
 								<input id="pass" name="password" type="password" class="form-control input-lg">
 							</div>
 						</form>
+
+										   <!-- fb login button -->
+          <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" onlogin="facebooklogin" data-scope="public_profile, email" data-show-faces="true"></div>
+          <div id="fb-root"></div>
 					</div>
 					<div class="form-group clearfix">
 						<button id="userSignUp" class="pull-right btn btn-success loginBtn" type="submit" data-loading-text="Log in">Create Account</button>
 					</div>
 				</form>
+
 				<p class="noAccount">Already have a BringTeam account?
 					<a href="/signin">Log In</a>
 				</p>
@@ -115,6 +120,37 @@
 	</div>
 </div>
 </div>
+
+<!-- // create modal and get more user info for players table when user signin with fbook a/c -->
+
+<script id="signup-modal" type="text/html">
+	<div class="modal fade">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Team Info</h4>
+      </div>
+      <div class="modal-body">
+      		<label for="exampleSelect1">Team Name</label>
+							<select class="form-control" id="teams" name="team">
+      		{{#each teams}}
+      				<option value="{{Team_name}}">{{Team_name}}</option>
+      			{{/each}}
+      			</select>
+      			<br>
+      		<p>Uniform Number<input id="uniform" type="number" name="uniformNum"></p>
+      </div>
+      <div class="modal-footer">
+        <button id="modalSubmit" type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+</script>
+
 <!--Footer describing team developers -->
 <div class="pageFooter">
 <div class = "container">
@@ -128,8 +164,11 @@ Copywrite: 2016, Made by Dream Team.  All rights reserved.</div>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
 		<!-- bootstrap stylesheet -->
 		<script type="text/javascript" src="/script/bootstrap.min.js"></script>
+		<!-- facebook js login -->
+		<script type="text/javascript" src="/script/faceBookLogin.js"></script>
+		     <!-- user login js -->
+    <script type="text/javascript" src="/script/userLogin.js"></script>
 		<!-- js -->
-		<script type="text/javascript" src="/script/script.js">
-		</script>
+		<script type="text/javascript" src="/script/script.js"></script>
 	</body>
 </html>
