--- a/views/events/events.html
+++ b/views/events/events.html
@@ -247,6 +247,8 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
 		<!-- bootstrap stylesheet -->
 		<script type="text/javascript" src="/script/bootstrap.min.js"></script>
+		     <!-- user login js -->
+    <script type="text/javascript" src="/script/userLogin.js"></script>
 		<!-- js -->
 		<script type="text/javascript" src="/script/script.js">
 		</script>
