--- a/views/enteringEvents/eventsEntry.html
+++ b/views/enteringEvents/eventsEntry.html
@@ -37,7 +37,7 @@
 					<div class="row">
 						<!-- <div class="col-md-3"> -->
 							<a class="homeLink col-md-3"  role="navigation" href="/"><span class="glyphicon glyphicon-home"></span></a>
-							  <button class="btn btn-primary events-btn"><a href="events">Events</a></button>
+							  <button class="btn btn-primary events-btn"><a href="/events">Events</a></button>
               <button class="btn btn-primary stats-btn"><a href="stats">Stats</a></button>
               <button class="btn btn-primary addplayers-btn"><a href="addplayers">Add Players</a></button>
 					</div>
@@ -146,8 +146,11 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
 		<!-- bootstrap stylesheet -->
 		<script type="text/javascript" src="/script/bootstrap.min.js"></script>
+		<!-- userForm js -->
+		<script type="text/javascript" src="/script/userForms.js"></script>
+		<!-- signin -->
+		<script type="text/javascript" src="/script/userLogin.js"></script>
 		<!-- js -->
-		<script type="text/javascript" src="/script/script.js">
-		</script>
+		<script type="text/javascript" src="/script/script.js"></script>
 	</body>
 </html>
