--- a/views/stats/displayCharts.html
+++ b/views/stats/displayCharts.html
@@ -101,8 +101,11 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
     <!-- bootstrap stylesheet -->
     <script type="text/javascript" src="/script/bootstrap.min.js"></script>
+    <!-- stats js -->
+    <script type="text/javascript" src="/script/stats.js"></script>
+    <!-- signin -->
+    <script type="text/javascript" src="/script/userLogin.js"></script>
     <!-- js -->
     <script type="text/javascript" src="/script/script.js"></script>
-    <script type="text/javascript" src="/script/stats.js"></script>
   </body>
 </html>
