--- a/views/events/events.html
+++ b/views/events/events.html
@@ -184,7 +184,7 @@
 </script>
 <!-- players template -->
 <div class="container playTeam">
-<h1 class="playerHeading">Players</h1>
+<h1 class="playerHeading">Team Players</h1>
 <div class="row">
 <div class="col-md-12">
 	<table class="table playerTable tablesorter">
