--- a/views/stats/displayCharts.html
+++ b/views/stats/displayCharts.html
@@ -76,27 +76,31 @@
           </ul>
         </div>
       </div>
+    </div>
+    <div class="container">
       <h1 class="stats">Team Stats</h1>
       <!--Div that will hold the bar chart-->
       <div id="chart_div"></div>
-      <!--Footer describing team developers -->
-      <div class="pageFooter">
-        <div class = "container">
-        Copywrite: 2016, Made by Dream Team.  All rights reserved.</div>
-      </div>
-      <!-- jquery -->
-      <script type="text/javascript" src="/script/jquery.js"></script>
-      <!-- bootstrap Switch -->
-      <script type="text/javascript" src="/script/bootstrap-switch.min.js"></script>
-      <!-- handlebars cdn -->
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
-      <!-- bootstrap stylesheet -->
-      <script type="text/javascript" src="/script/bootstrap.min.js"></script>
-      <!-- stats js -->
-      <script type="text/javascript" src="/script/stats.js"></script>
-      <!-- signin -->
-      <script type="text/javascript" src="/script/userLogin.js"></script>
-      <!-- js -->
-      <script type="text/javascript" src="/script/script.js"></script>
-    </body>
-  </html>
+    </div>
+    <!--Footer describing team developers -->
+    <div class="pageFooter">
+      Copywrite: 2016, Made by Dream Team.  All rights reserved.
+      <a id="newEvent" class="new-event col-md-2" href="/input">Enter new events</a>
+      <a id="enterPlayer" class="enter-player col-md-1" href="/addplayers">Add players</a>
+    </div>
+    <!-- jquery -->
+    <script type="text/javascript" src="/script/jquery.js"></script>
+    <!-- bootstrap Switch -->
+    <script type="text/javascript" src="/script/bootstrap-switch.min.js"></script>
+    <!-- handlebars cdn -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+    <!-- bootstrap stylesheet -->
+    <script type="text/javascript" src="/script/bootstrap.min.js"></script>
+    <!-- stats js -->
+    <script type="text/javascript" src="/script/stats.js"></script>
+    <!-- signin -->
+    <script type="text/javascript" src="/script/userLogin.js"></script>
+    <!-- js -->
+    <script type="text/javascript" src="/script/script.js"></script>
+  </body>
+</html>
